syntax = "proto3";

package littlehorse;

import "google/protobuf/timestamp.proto";
import "variable.proto";

option go_package = ".;model";
option java_multiple_files = true;
option java_package = "io.littlehorse.sdk.common.proto";


message ExternalEvent {
  string wf_run_id = 1;
  string external_event_def_name = 2;
  string guid = 3;
  google.protobuf.Timestamp created_at = 4;
  VariableValue content = 5;
  optional int32 thread_run_number = 6;
  optional int32 node_run_position = 7;
  bool claimed = 8;
}
  
// ExternalEventDef
message ExternalEventDef {
  string name = 1;
  google.protobuf.Timestamp created_at = 2;
  int32 retention_hours = 3;

  // TODO: Add output schema.
  // TODO: Add ability to correlate to WfRun.
  // TODO: Add ability to auto-provision a webhook listener.
}
